# Synaris

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/web/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/hooks/: useUserSync.ts
apps/web/providers/: README.md
apps/web/public/: README.md
apps/web/services/: README.md
apps/web/styles/: README.md
docs/: ai.md  api.md  architecture.md  changelog.md  contributing.md  database.md  decisions.md  rag.md  research.md  roadmap.md
services/ai/: __init__.py
services/ai/evaluation/: __init__.py
services/ai/memory/: __init__.py
services/ai/orchestrator/: __init__.py  orchestrator.py
services/ai/prompts/: __init__.py
services/ai/providers/: __init__.py  base.py
services/ai/safety/: __init__.py
services/auth/: __init__.py
services/rag/: __init__.py
services/rag/chunking/: __init__.py
services/rag/citations/: __init__.py
services/rag/embeddings/: __init__.py
services/rag/indexing/: __init__.py
services/rag/ingestion/: __init__.py
services/rag/reranking/: __init__.py
services/rag/retrieval/: __init__.py
services/rag/vectorstore/: __init__.py
services/security/: __init__.py
tests/e2e/: README.md
(+29 files in other folders)
